--- a/src/pages/blog/first-post.mdx
+++ b/src/pages/blog/first-post.mdx
@@ -1,11 +1,8 @@
 ---
-title: "My First Blog Post"
-pubDate: 2022-07-01
-description: "This is the first post of my new Astro blog."
-author: "Astro Learner"
-image:
-  url: "https://astro.build/assets/blog/astro-1-release-update/cover.jpeg"
-  alt: "The Astro logo with the word One."
+layout: "../../layouts/BlogPost.astro"
+title: "I Made a Wordle Clone"
+description: "Nexdle is a wordle clone made with React, TypeScript, TailwindCSS, Vite, Zustand and tested with Vitest."
+publishDate: "March 21, 2022"
 tags: ["astro", "blogging", "learning in public"]
 ---
 
